[metadata]
name = pbc-fix
version = attr: pbc_fix.pbc_fix.VERSION
author = jhelie
author_email = jean.helie@gmail.com
description = A utility to fix crossing of unit cell boundaries in Molecular Dynamics simulation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jhelie/pbc_fix
project_urls =
    Bug Tracker = https://github.com/jhelie/pbc_fix/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    MDAnalysis >= 2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pbc_fix = pbc_fix.pbc_fix:main
